fix docs horizontal scroll

--- a/src/app/docs/components/docs-layout/docs-layout.module.scss
+++ b/src/app/docs/components/docs-layout/docs-layout.module.scss
@@ -1,5 +1,20 @@
 .docs-layout {
   align-items: initial;
+  padding-top: 0;
+  margin: 0 auto;
+  gap: 120px;
+
+  @include media-laptop {
+    gap: 100px;
+  }
+
+  @include media-laptop-medium {
+    gap: 80px;
+  }
+
+  @include media-tablet {
+   gap: initial;
+  }
 
   .menu-wrapper {
     width: initial;
@@ -36,7 +51,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-
+    min-width: 0;
     padding-top: 40px;
     padding-left: 0;
 
